src/objects/Literature_Request_Item__c.object
<CustomObject>
    <fields>
        <fullName>Item_Code__c</fullName>
        <label>Item Code</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Literature_Request__c</fullName>
        <label>Literature Request</label>
        <referenceTo>Literature_Request__c</referenceTo>
        <relationshipLabel>Literature Request Items</relationshipLabel>
        <relationshipName>Literature_Request_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_Item_ID__c</fullName>
        <externalId>true</externalId>
        <label>Order Item ID</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Status__c</fullName>
        <label>Shipping Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Literature Request Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Literature Request Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>